--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "google-maps-react": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1"
   },
   "scripts": {
