--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Django==3.0.3
 django-filter==2.2.0
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
+factory-boy==2.12.0
+Faker==4.0.3
 Markdown==3.2
 postgres==3.0.0
 psycopg2==2.8.4
